[gd_scene load_steps=17 format=2]

[ext_resource path="res://DraggablePopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://OpenButton.gd" type="Script" id=2]
[ext_resource path="res://SaveButton.gd" type="Script" id=3]
[ext_resource path="res://Settings/SettingPopup.gd" type="Script" id=4]
[ext_resource path="res://Assets/icon_save.png" type="Texture" id=5]
[ext_resource path="res://Assets/icon_open.png" type="Texture" id=6]
[ext_resource path="res://Assets/icon_canvas_size.png" type="Texture" id=7]
[ext_resource path="res://Assets/icon_language_48.png" type="Texture" id=8]
[ext_resource path="res://Assets/icon_new.png" type="Texture" id=9]
[ext_resource path="res://Settings/CanvasSizePopup.tscn" type="PackedScene" id=10]
[ext_resource path="res://OpenFileDialog.tscn" type="PackedScene" id=11]
[ext_resource path="res://Settings/LanguagePopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://Settings/LayerCheckButton.tscn" type="PackedScene" id=13]
[ext_resource path="res://NewPopup.tscn" type="PackedScene" id=14]
[ext_resource path="res://Settings/PreviewCheckButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://SaveFileDialog.tscn" type="PackedScene" id=16]

[node name="SettingPopup" type="Control"]
margin_right = 10.0
margin_bottom = 9.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggablePopup" parent="." instance=ExtResource( 1 )]
visible = true
margin_left = -1.0
margin_right = 308.0
margin_bottom = 253.0

[node name="HBoxContainer" type="HBoxContainer" parent="DraggablePopup"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DraggablePopup/HBoxContainer"]
margin_top = 5.0
margin_right = 89.0
margin_bottom = 21.0
text = "Project name"

[node name="ProjectNameLabel" type="LineEdit" parent="DraggablePopup/HBoxContainer"]
margin_left = 93.0
margin_right = 268.0
margin_bottom = 26.0
rect_min_size = Vector2( 175, 0 )
text = "Untitled"
editable = false
placeholder_text = "Input project name..."
caret_blink = true

[node name="GridContainer" type="GridContainer" parent="DraggablePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = -20.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_right = 130.0
margin_bottom = 50.0
rect_min_size = Vector2( 130, 50 )
text = "New"
icon = ExtResource( 9 )
expand_icon = true

[node name="NewPopup" parent="DraggablePopup/GridContainer/NewButton" instance=ExtResource( 14 )]
margin_left = -334.372
margin_top = -149.236
margin_right = -334.372
margin_bottom = -149.236

[node name="OpenButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_left = 134.0
margin_right = 268.0
margin_bottom = 50.0
rect_min_size = Vector2( 130, 50 )
text = "Open"
icon = ExtResource( 6 )
expand_icon = true
script = ExtResource( 2 )

[node name="OpenFileDialog" parent="DraggablePopup/GridContainer/OpenButton" instance=ExtResource( 11 )]
current_dir = "/MyProjects/Godot/ExpertPixelEditor"
current_path = "/MyProjects/Godot/ExpertPixelEditor/"

[node name="SaveButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_top = 54.0
margin_right = 130.0
margin_bottom = 104.0
rect_min_size = Vector2( 130, 50 )
text = "Save"
icon = ExtResource( 5 )
expand_icon = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileDialog" parent="DraggablePopup/GridContainer/SaveButton" instance=ExtResource( 16 )]
current_dir = "/MyProjects/Godot/ExpertPixelEditor"
current_path = "/MyProjects/Godot/ExpertPixelEditor/"

[node name="CanvasSizeButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_left = 134.0
margin_top = 54.0
margin_right = 268.0
margin_bottom = 104.0
rect_min_size = Vector2( 130, 50 )
text = "Canvas Size"
icon = ExtResource( 7 )
expand_icon = true

[node name="CanvasSizePopup" parent="DraggablePopup/GridContainer/CanvasSizeButton" instance=ExtResource( 10 )]
margin_left = -335.599
margin_top = 49.3211
margin_right = -316.599
margin_bottom = 65.3211

[node name="LanguageButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_top = 108.0
margin_right = 130.0
margin_bottom = 158.0
rect_min_size = Vector2( 130, 50 )
text = "Language"
icon = ExtResource( 8 )
expand_icon = true

[node name="LanguagePopup" parent="DraggablePopup/GridContainer/LanguageButton" instance=ExtResource( 12 )]
margin_left = 334.329
margin_top = 10.7028
margin_right = 334.329
margin_bottom = 10.7028

[node name="PreviewCheckButton" parent="DraggablePopup/GridContainer" instance=ExtResource( 15 )]

[node name="LayerCheckButton" parent="DraggablePopup/GridContainer" instance=ExtResource( 13 )]

[connection signal="focus_entered" from="DraggablePopup/HBoxContainer/ProjectNameLabel" to="." method="_on_ProjectNameLabel_focus_entered"]
[connection signal="focus_exited" from="DraggablePopup/HBoxContainer/ProjectNameLabel" to="." method="_on_ProjectNameLabel_focus_exited"]
[connection signal="text_changed" from="DraggablePopup/HBoxContainer/ProjectNameLabel" to="." method="_on_ProjectNameLabel_text_changed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/OpenButton" to="DraggablePopup/GridContainer/OpenButton" method="_on_OpenButton_pressed"]
[connection signal="file_selected" from="DraggablePopup/GridContainer/OpenButton/OpenFileDialog" to="DraggablePopup/GridContainer/OpenButton" method="_on_OpenFileDialog_file_selected"]
[connection signal="pressed" from="DraggablePopup/GridContainer/SaveButton" to="DraggablePopup/GridContainer/SaveButton" method="_on_SaveButton_pressed"]
[connection signal="file_selected" from="DraggablePopup/GridContainer/SaveButton/SaveFileDialog" to="DraggablePopup/GridContainer/SaveButton" method="_on_SaveFileDialog_file_selected"]
[connection signal="pressed" from="DraggablePopup/GridContainer/CanvasSizeButton" to="." method="_on_CanvasSizeButton_pressed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/LanguageButton" to="." method="_on_LanguageButton_pressed"]
